force-app/main/default/objects/Machine_Asset__c/fields/Next_Maintenance_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintenance_Due__c</fullName>
    <formula>IF( ISBLANK(Last_Maintenance_Date__c) , DATEVALUE(&quot;&quot;), Last_Maintenance_Date__c + 90)</formula>
    <label>Next Maintenance Due</label>
    <type>Date</type>
</CustomField>