force-app/main/default/objects/Machine_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Serial_Number__c</columns>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Asset_Status__c</columns>
    <columns>Installation_Date__c</columns>
    <columns>Warranty_Start__c</columns>
    <columns>Warranty_End__c</columns>
    <columns>Warranty_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>